sample/ArrayTest/AT_impl_lib_interface_globals.hpp

EXPORT SEXP AT_R_TEST_ONE_IF_INTERNAL_BV(SEXP rInstance, SEXP v, SEXP vb9_v, SEXP test_one_if_internalb9_v)
{
  ASSERT_TYPE_TAG(rInstance, R_ArrayTest);
  
  R_ArrayTest* pContext = (R_ArrayTest*)R_ExternalPtrAddr(rInstance);
  
  SEXP Result = pContext->R_TEST_ONE_IF_INTERNAL_BV(v, vb9_v, test_one_if_internalb9_v);
  
  return (Result);
}
EXPORT SEXP AT_R_nt_TEST_ONE_IF_INTERNAL_BV(SEXP rInstance, SEXP v, SEXP vb9_v, SEXP test_one_if_internalb9_v)
{
  ASSERT_TYPE_TAG(rInstance, R_ArrayTest);
  
  R_ArrayTest* pContext = (R_ArrayTest*)R_ExternalPtrAddr(rInstance);
  
  SEXP Result = pContext->R_nt_TEST_ONE_IF_INTERNAL_BV(v, vb9_v, test_one_if_internalb9_v);
  
  return (Result);
}
EXPORT SEXP AT_R_TEST_ONE_IF_INTERNAL_DV(SEXP rInstance, SEXP v, SEXP vd8_v, SEXP test_one_if_internal)
{
  ASSERT_TYPE_TAG(rInstance, R_ArrayTest);
  
  R_ArrayTest* pContext = (R_ArrayTest*)R_ExternalPtrAddr(rInstance);
  
  SEXP Result = pContext->R_TEST_ONE_IF_INTERNAL_DV(v, vd8_v, test_one_if_internal);
  
  return (Result);
}
EXPORT SEXP AT_R_nt_TEST_ONE_IF_INTERNAL_DV(SEXP rInstance, SEXP v, SEXP vd8_v, SEXP test_one_if_internal)
{
  ASSERT_TYPE_TAG(rInstance, R_ArrayTest);
  
  R_ArrayTest* pContext = (R_ArrayTest*)R_ExternalPtrAddr(rInstance);
  
  SEXP Result = pContext->R_nt_TEST_ONE_IF_INTERNAL_DV(v, vd8_v, test_one_if_internal);
  
  return (Result);
}