sample/ArrayTest/AT_impl_lib_interface_globals.pas


function AT_R_TEST_ONE_IF_INTERNAL_BV(rInstance : SEXP; v : SEXP; vb9_v : SEXP; test_one_if_internalb9_v : SEXP) : SEXP; cdecl;

begin
  R_CHECK_POINTER(rInstance);
  
  Result := R_ArrayTest(R_ExternalPtrAddr(rInstance)).R_TEST_ONE_IF_INTERNAL_BV(v, vb9_v, test_one_if_internalb9_v);
end;

function AT_R_nt_TEST_ONE_IF_INTERNAL_BV(rInstance : SEXP; v : SEXP; vb9_v : SEXP; test_one_if_internalb9_v : SEXP) : SEXP; cdecl;

begin
  R_CHECK_POINTER(rInstance);
  
  Result := R_ArrayTest(R_ExternalPtrAddr(rInstance)).R_nt_TEST_ONE_IF_INTERNAL_BV(v, vb9_v, test_one_if_internalb9_v);
end;

function AT_R_TEST_ONE_IF_INTERNAL_DV(rInstance : SEXP; v : SEXP; vd8_v : SEXP; test_one_if_internal : SEXP) : SEXP; cdecl;

begin
  R_CHECK_POINTER(rInstance);
  
  Result := R_ArrayTest(R_ExternalPtrAddr(rInstance)).R_TEST_ONE_IF_INTERNAL_DV(v, vd8_v, test_one_if_internal);
end;

function AT_R_nt_TEST_ONE_IF_INTERNAL_DV(rInstance : SEXP; v : SEXP; vd8_v : SEXP; test_one_if_internal : SEXP) : SEXP; cdecl;

begin
  R_CHECK_POINTER(rInstance);
  
  Result := R_ArrayTest(R_ExternalPtrAddr(rInstance)).R_nt_TEST_ONE_IF_INTERNAL_DV(v, vd8_v, test_one_if_internal);
end;

